fixed spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -555,4 +555,11 @@ img#slider4 {
 	  
 	  text-align: center;
   }
+  #inter{
+	  margin-top: 2em;
+	  margin-bottom: 2em;
+  }
+  #mission{
+	  margin-bottom: 2em;
+  }
 }
